// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBar Error message renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: .8125rem;
  padding: .625rem 1.5rem;
  border-radius: .125rem;
  min-height: 2rem;
  background: hsla(0,0%,0%,.03);
  font-family: "Roboto",sans-serif;
  color: hsla(0,0%,0%,.67);
  background: #C26565;
  color: hsla(0,100%,100%,.87);
}

.c0 svg {
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 1rem 0 0;
  -webkit-flex: 0 0 1.5rem;
  -ms-flex: 0 0 1.5rem;
  flex: 0 0 1.5rem;
}

.c0 svg {
  fill: hsla(0,0%,0%,.57);
}

.c0 svg {
  fill: #FFFFFF;
}

.c0 .c1 {
  color: #FFFFFF;
}

<div
  className="c0"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
    />
  </svg>
  <div>
    ErrorMessageBar
  </div>
</div>
`;

exports[`MessageBar Experimental message renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: .8125rem;
  padding: .625rem 1.5rem;
  border-radius: .125rem;
  min-height: 2rem;
  background: hsla(0,0%,0%,.03);
  font-family: "Roboto",sans-serif;
  color: hsla(0,0%,0%,.67);
  background: #7E57C2;
  color: hsla(0,100%,100%,.87);
}

.c0 svg {
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 1rem 0 0;
  -webkit-flex: 0 0 1.5rem;
  -ms-flex: 0 0 1.5rem;
  flex: 0 0 1.5rem;
}

.c0 svg {
  fill: hsla(0,0%,0%,.57);
}

.c0 svg {
  fill: #FFFFFF;
}

.c0 .c1 {
  color: #FFFFFF;
}

<div
  className="c0"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M5,19A1,1 0 0,0 6,20H18A1,1 0 0,0 19,19C19,18.79 18.93,18.59 18.82,18.43L13,8.35V4H11V8.35L5.18,18.43C5.07,18.59 5,18.79 5,19M6,22A3,3 0 0,1 3,19C3,18.4 3.18,17.84 3.5,17.37L9,7.81V6A1,1 0 0,1 8,5V4A2,2 0 0,1 10,2H14A2,2 0 0,1 16,4V5A1,1 0 0,1 15,6V7.81L20.5,17.37C20.82,17.84 21,18.4 21,19A3,3 0 0,1 18,22H6M13,16L14.34,14.66L16.27,18H7.73L10.39,13.39L13,16M12.5,12A0.5,0.5 0 0,1 13,12.5A0.5,0.5 0 0,1 12.5,13A0.5,0.5 0 0,1 12,12.5A0.5,0.5 0 0,1 12.5,12Z"
    />
  </svg>
  <div>
    ExperimentalMessageBar
  </div>
</div>
`;

exports[`MessageBar Info message renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: .8125rem;
  padding: .625rem 1.5rem;
  border-radius: .125rem;
  min-height: 2rem;
  background: hsla(0,0%,0%,.03);
  font-family: "Roboto",sans-serif;
  color: hsla(0,0%,0%,.67);
  background: #D3DFEC;
}

.c0 svg {
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 1rem 0 0;
  -webkit-flex: 0 0 1.5rem;
  -ms-flex: 0 0 1.5rem;
  flex: 0 0 1.5rem;
}

.c0 svg {
  fill: hsla(0,0%,0%,.57);
}

<div
  className="c0"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
    />
  </svg>
  <div>
    InfoMessageBar
  </div>
</div>
`;

exports[`MessageBar Normal message renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: .8125rem;
  padding: .625rem 1.5rem;
  border-radius: .125rem;
  min-height: 2rem;
  background: hsla(0,0%,0%,.03);
  font-family: "Roboto",sans-serif;
  color: hsla(0,0%,0%,.67);
}

.c0 svg {
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 1rem 0 0;
  -webkit-flex: 0 0 1.5rem;
  -ms-flex: 0 0 1.5rem;
  flex: 0 0 1.5rem;
}

.c0 svg {
  fill: hsla(0,0%,0%,.57);
}

<div
  className="c0"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
    />
  </svg>
  <div>
    MessageMessageBar
  </div>
</div>
`;

exports[`MessageBar Warning message renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: .8125rem;
  padding: .625rem 1.5rem;
  border-radius: .125rem;
  min-height: 2rem;
  background: hsla(0,0%,0%,.03);
  font-family: "Roboto",sans-serif;
  color: hsla(0,0%,0%,.67);
  background: #EFE1B3;
}

.c0 svg {
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 1rem 0 0;
  -webkit-flex: 0 0 1.5rem;
  -ms-flex: 0 0 1.5rem;
  flex: 0 0 1.5rem;
}

.c0 svg {
  fill: hsla(0,0%,0%,.57);
}

<div
  className="c0"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
    />
  </svg>
  <div>
    WarningMessageBar
  </div>
</div>
`;
